--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 ### DESIGN CHANGES ###
 ######################
 
+# True color
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # Panes
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
