--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,7 @@ bind \ split-window -h -c '#{pane_current_path}'
 # Copy mode
 bind Escape copy-mode
 bind p paste-buffer
+bind C-p choose-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
