--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,9 +78,9 @@ setw -g mode-fg colour196
 setw -g mode-bg colour238
 
 # The panes
-set -g pane-border-bg black
+set -g pane-border-bg default
 set -g pane-border-fg colour238
-set -g pane-active-border-bg black
+set -g pane-active-border-bg default
 set -g pane-active-border-fg colour51
 
 # The statusbar
