--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,46 +73,31 @@ set -g bell-action none
 
 # The modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+setw -g mode-style fg=colour196,bg=colour238,bold
 
 # The panes
-set -g pane-border-bg default
-set -g pane-border-fg colour238
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour51
+set -g pane-border-style fg=colour238,bg=default
+set -g pane-active-border-style fg=colour51,bg=default
 
 # The statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-interval 2
-set -g status-bg default
-set -g status-fg colour137
-set -g status-attr dim
+set -g status-style fg=colour137,bg=default,dim
 set -g status-left ''
 set -g status-right '#(battery -tp) #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
 # Window status
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=colour81,bg=colour238,bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style fg=colour138,bg=colour235,none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style fg=colour255,bg=colour1,bold
 
 # The messages
-set -g message-command-fg blue
-set -g message-command-bg black
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-command-style fg=blue,bg=black,bold
+set -g message-style fg=colour232,bg=colour166
