--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,8 +61,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 ######################
 
 # True color
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal 'xterm-256color'
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # Loud or Quiet?
 set -g visual-activity off
@@ -72,32 +72,27 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # The modes
-setw -g clock-mode-colour colour135
-setw -g mode-style fg=colour196,bg=colour238,bold
+setw -g clock-mode-colour cyan
 
 # The panes
-set -g pane-border-style fg=colour238,bg=default
-set -g pane-active-border-style fg=colour51,bg=default
+set -g pane-border-style fg=black,bg=default
+set -g pane-active-border-style fg=brightblack,bg=default
 
 # The statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-interval 2
-set -g status-style fg=colour137,bg=default,dim
-set -g status-left ''
-set -g status-right '#(battery -tp) #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-style fg=white,bg=black,none
+set -g status-left '#[fg=black,bg=blue,bold] #S '
+set -g status-right '#(battery -tp) #[fg=white,bg=black] %d/%m #[fg=white,bg=brightblack] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
 # Window status
-setw -g window-status-current-style fg=colour81,bg=colour238,bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-style fg=colour138,bg=colour235,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style fg=colour255,bg=colour1,bold
+setw -g window-status-format '#[bg=black] #[fg=white,bg=brightblack] #I#[fg=white,bg=brightblack]:#[fg=white,bg=brightblack]#W #F '
+setw -g window-status-current-format '#[bg=black] #[fg=black,bg=cyan] #I#[fg=black,bg=cyan]:#[fg=black,bg=cyan]#W#F '
+set -g window-status-separator ''
 
 # The messages
-set -g message-command-style fg=blue,bg=black,bold
-set -g message-style fg=colour232,bg=colour166
+set -g message-command-style fg=cyan,bg=brightblack
+set -g message-style fg=cyan,bg=brightblack
