Update vim config - flutter sdk lookup - add vim-table-mode - add wakatime

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -2,5 +2,5 @@
   "diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
   "diagnostic.infoSign": "•",
-  "prettier.eslintIntegration": true
+  "flutter.sdk.flutter-lookup": "asdf which flutter"
 }
