More Neovim config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind C-s set-window-option synchronize-panes
 
 # Split pane and retain the current directory of existing pane
 bind _ split-window -v -c '#{pane_current_path}'
-bind \ split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 
 # Copy mode
 bind Escape copy-mode
@@ -57,8 +57,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 ######################
 
 # True color
-set -g default-terminal 'xterm-256color'
-set -ga terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ',xterm-256color*:Tc'
 
 # Loud or Quiet?
 set -g visual-activity off
