--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # True color
 set -g default-terminal 'tmux-256color'
-set -ga terminal-overrides ',xterm-256color*:Tc'
+set -ga terminal-overrides ',xterm-*:Tc'
 
 # Loud or Quiet?
 set -g visual-activity off
