Disable ligature due to nerdfont issue

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,6 +6,13 @@ italic_font auto
 bold_italic_font auto
 font_size 18.0
 
+# Disable ligatures due to some Iosevka Nerd Font issues
+# https://github.com/ryanoasis/nerd-fonts/issues/591
+disable_ligatures always
+font_features IosevkaNerdFontCompleteM- -liga -calt
+font_features IosevkaNerdFontCompleteM-Oblique -liga -calt
+font_features IosevkaNerdFontCompleteM-Bold -liga -calt
+
 cursor_shape block
 
 copy_on_select yes
