Update Kitty font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,17 +1,10 @@
 # vim:fileencoding=utf-8
 
-font_family Iosevka Nerd Font Mono
+font_family Iosevka Term
 bold_font auto
 italic_font auto
 bold_italic_font auto
 font_size 18.0
-
-# Disable ligatures due to some Iosevka Nerd Font issues
-# https://github.com/ryanoasis/nerd-fonts/issues/591
-disable_ligatures always
-font_features IosevkaNerdFontCompleteM- -liga -calt
-font_features IosevkaNerdFontCompleteM-Oblique -liga -calt
-font_features IosevkaNerdFontCompleteM-Bold -liga -calt
 
 cursor_shape block
 
