--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,28 +1,29 @@
 # vim:fileencoding=utf-8
 
-font_family Iosevka Term
-bold_font auto
-italic_font auto
-bold_italic_font auto
-font_size 18.0
+font_family       Iosevka Term
+bold_font         auto
+italic_font       auto
+bold_italic_font  auto
+font_size         18.0
 disable_ligatures cursor
 
 cursor_shape block
 
 copy_on_select yes
 
-scrollback_lines 10000
-scrollback_pager less +G -R
+scrollback_lines      10000
+scrollback_pager      less +G -R
 scrollback_in_new_tab no
 
 enable_audio_bell no
-bell_on_tab no
+bell_on_tab       no
 
 term xterm-kitty
 
-window_border_width 0
+window_border_width  0
 window_padding_width 0
 
 confirm_os_window_close 0
 
 include ./nord.conf
+include ./font-nerd-symbols.conf
