Change color scheme to Nightfox

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,6 @@ copy_on_select yes
 
 scrollback_lines      10000
 scrollback_pager      less +G -R
-scrollback_in_new_tab no
 
 enable_audio_bell no
 bell_on_tab       no
@@ -25,5 +24,6 @@ window_padding_width 0
 
 confirm_os_window_close 0
 
-include ./nord.conf
+# include ./nord.conf
+include ./nightfox.conf
 include ./font-nerd-symbols.conf
