Migrate to Chezmoi

--- a/dot_tmuxinator/dotfiles.yml
+++ b/dot_tmuxinator/dotfiles.yml
@@ -6,7 +6,7 @@ startup_window: neovim
 startup_pane: 1
 
 windows:
-  - console: dotfiles status
+  - console: chezmoi status
   - neovim:
       root: ~/.config/nvim
       panes:
